# pgn

./: LICENSE  pgn.cabal
src/: FicsToPgn.hs
src/Data/: PGN.hs  SAN.hs
test/: out.fics  test
