name:            pgn
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        general pgn reading/writing;
                 supports large boards and extended piece-sets.
build-type:      Simple
build-depends:   base, parsec >= 3, split

exposed-modules: Data.PGN, Data.SAN
hs-source-dirs:  src
